--- a/static/styles.css
+++ b/static/styles.css
@@ -63,7 +63,9 @@ h2 {
 	margin: 0;
 	padding: 0;
 
-	font-weight: 700;
+	font-size: 64px;
+	font-weight: 600;
+	line-height: 78.02px;
 }
 
 ::placeholder {
@@ -78,14 +80,20 @@ h2 {
 /* MAIN */
 
 .wrapper {
-	background: #fff;
-}
-
-.header {
 	position: relative;
 
-	margin-top: 37px;
+	background: #fff;
+
+	width: 100%;
+	min-width: 1440px;
+}
+
+.header,
+.content {
+	margin: 37px auto 0 auto;
 	padding: 0 86px;
+
+	width: 1440px;
 }
 
 .header_section {
@@ -94,8 +102,6 @@ h2 {
 	justify-content: space-between;
 
 	margin: 0 auto;
-
-	width: 1440px;
 }
 
 .logo {
@@ -214,7 +220,7 @@ h2 {
 	display: block;
 
 	position: absolute;
-	bottom: 0;
+	top: 97;
 	left: 0;
 
 	width: 100%;
@@ -250,4 +256,11 @@ h2 {
 .content {
 	display: flex;
 	justify-content: space-between;
+
+	margin-top: 76px;
+}
+
+.content_left,
+.content_right {
+	width: 50%;
 }
