--- a/static/styles.css
+++ b/static/styles.css
@@ -58,8 +58,7 @@ button {
 	cursor: pointer;
 }
 
-h1,
-h2 {
+h1 {
 	margin: 0;
 	padding: 0;
 
@@ -157,6 +156,7 @@ h2 {
 	color: #29293077;
 }
 
+.search-form:has(.search-form__input:focus),
 .search-form:has(.search-form__input:focus-visible) {
 	outline-color: var(--color-theme-main);
 }
@@ -186,7 +186,7 @@ h2 {
 	font-weight: 500;
 	line-height: 37px;
 
-	color: #2B2626;
+	color: #2b2626;
 
 	border: 1px solid var(--color-theme-main);
 	border-radius: 30px;
@@ -257,10 +257,274 @@ h2 {
 	display: flex;
 	justify-content: space-between;
 
-	margin-top: 76px;
+	margin: 76px auto;
 }
 
 .content_left,
 .content_right {
 	width: 50%;
+}
+
+.content_left {
+	margin-top: 68px;
+}
+
+.content__description {
+	font-size: 21px;
+	font-weight: 500;
+	line-height: 35px;
+}
+
+.buy-btn {
+	height: 70px;
+	width: 263px;
+
+	margin-top: 40px;
+	padding-top: 1px;
+
+	font-size: 21px;
+	font-weight: 600;
+	line-height: 70px;
+
+	color: #fff;
+
+	background: #10b981;
+
+	border-radius: 10px;
+
+	box-shadow: 0px 25px 50px 0px #845ec226;
+}
+
+.reviews {
+	margin-top: 114px;
+}
+
+.reviews,
+.reviews__icons {
+	display: flex;
+}
+
+.reviews__icons-img {
+	border: 2px solid #fff;
+	border-radius: 50%;
+
+	overflow: hidden;
+}
+
+.reviews__icons-img + .reviews__icons-img {
+	margin-left: -20px;
+}
+
+.reviews__count {
+	margin-top: -6px;
+	margin-left: 16px;
+
+	font-size: 26px;
+	font-weight: 500;
+	line-height: 36px;
+}
+
+.content_right {
+	display: flex;
+	align-items: end;
+	justify-content: right;
+}
+
+.play-video {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	width: 124px;
+
+	margin-bottom: 36px;
+}
+
+.play-video__wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	position: relative;
+
+	margin-bottom: 8px;
+
+	height: 78px;
+	width: 78px;
+}
+
+.play-video__wrapper::after {
+	content: "";
+
+	display: block;
+
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+
+	border: 1px solid transparent;
+	background: linear-gradient(white, white) padding-box,
+		conic-gradient(#10b981 9%, rgba(16, 185, 129, 0) 60%) border-box;
+
+	border-radius: 50%;
+
+	transform: rotate(-60deg);
+}
+
+.play-video__icon {
+	display: flex;
+	justify-content: center;
+
+	position: relative;
+
+	height: 68px;
+	width: 68px;
+
+	border: 2px solid #fff;
+	border-radius: 50%;
+
+	overflow: hidden;
+
+	z-index: 1;
+}
+
+.play-video a {
+	font-size: 21px;
+	font-weight: 500;
+	line-height: 35px;
+}
+
+.headphones {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	position: relative;
+
+	height: 605px;
+	width: 430px;
+}
+
+.star-top {
+	position: absolute;
+
+	top: 0;
+	left: 0;
+}
+
+.star-bottom {
+	position: absolute;
+
+	right: 0;
+	bottom: 0;
+}
+
+.headphones__picture {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	height: 477px;
+	width: 272px;
+
+	background: #ecfef4;
+
+	border-radius: 136px;
+}
+
+.headphones__text {
+	position: absolute;
+	top: 108px;
+	left: -67px;
+
+	font-size: 40px;
+	font-weight: 600;
+	line-height: 48.76px;
+
+	height: 64px;
+	width: 200px;
+
+	transform: rotate(-100deg);
+}
+
+.headphones__text span {
+	position: absolute;
+
+	top: 0;
+	left: 0;
+
+	height: 200px;
+	width: 20px;
+
+	transform-origin: bottom center;
+}
+
+.headphones__text span:nth-of-type(1) {
+	transform: rotate(6deg);
+}
+
+.headphones__text span:nth-of-type(2) {
+	transform: rotate(16deg);
+}
+
+.headphones__text span:nth-of-type(3) {
+	transform: rotate(25deg);
+}
+
+.headphones__text span:nth-of-type(4) {
+	transform: rotate(38deg);
+}
+
+.headphones__text span:nth-of-type(5) {
+	transform: rotate(49deg);
+}
+
+.headphones__text span:nth-of-type(6) {
+	transform: rotate(58deg);
+}
+
+.headphones__text span:nth-of-type(7) {
+	transform: rotate(66deg);
+}
+
+.headphones__text span:nth-of-type(8) {
+	transform: rotate(73deg);
+}
+
+.headphones__text span:nth-of-type(9) {
+	transform: rotate(84deg);
+}
+
+.headphones__text span:nth-of-type(10) {
+	transform: rotate(97deg) scale(0.94) translateY(-12px);
+}
+
+.headphones__text span:nth-of-type(11) {
+	transform: rotate(101deg) scale(0.96) translateY(-9px);
+}
+
+.headphones__text span:nth-of-type(12) {
+	transform: rotate(110deg) scaleX(1.08) translateY(-1px);
+}
+
+.headphones__text span:nth-of-type(13) {
+	transform: rotate(119deg);
+}
+
+.headphones__text span:nth-of-type(14) {
+	transform: rotate(128deg);
+}
+
+.headphones__text span:nth-of-type(15) {
+	transform: rotate(140deg) translate(-13px, 2px);
+}
+
+.headphones__text span:nth-of-type(16) {
+	transform: rotate(151deg);
+}
+
+.headphones__text span:nth-of-type(17) {
+	transform: rotate(155deg);
 }
