feat(layout4): section started

--- a/static/styles.css
+++ b/static/styles.css
@@ -60,6 +60,10 @@ button {
 	cursor: pointer;
 }
 
+button[disabled] {
+	pointer-events: none;
+}
+
 h1,
 h2,
 h3 {
@@ -109,7 +113,7 @@ p {
 	background: #10b981;
 }
 
-.tabs__wrapper {
+.tabs {
 	display: flex;
 }
 
@@ -133,6 +137,15 @@ p {
 	color: #fff;
 
 	background: var(--color-theme-primary);
+}
+
+.tabs-content {
+	display: flex;
+	justify-content: space-between;
+
+	width: 100%;
+
+	margin-top: 92px;
 }
 
 .ontop {
@@ -702,22 +715,16 @@ p {
 	color: #fff;
 }
 
-.content-sellers {
+.content-sellers,
+.content-trending {
 	flex-direction: column;
 	align-items: center;
+
+	padding-bottom: 48px;
 }
 
-.content-sellers__tabs {
+.content__tabs {
 	margin-top: 55px;
-}
-
-.sellers-tabs_content {
-	display: flex;
-	justify-content: space-between;
-
-	width: 100%;
-
-	margin-top: 92px;
 }
 
 .card-wrapper {
