--- a/static/styles.css
+++ b/static/styles.css
@@ -125,6 +125,10 @@ p {
 
 	width: 100%;
 	width: calc(100% + 120px);
+
+	@media screen and (width <= 768px) {
+		flex-direction: column;
+	}
 }
 
 .tabs-wrapper__button_left {
@@ -134,6 +138,10 @@ p {
 .tabs-pg-btn {
 	width: 60px;
 	min-width: 60px; /* Без этого правила ширина меньше 60px */
+
+	@media screen and (width <= 768px) {
+		display: none;
+	}
 }
 
 .tabs-pg-btn img {
@@ -197,6 +205,14 @@ p {
 
 	width: 100%;
 	min-width: 1440px;
+
+	@media screen and (width <= 1439px) {
+		min-width: unset;
+	}
+
+	@media screen and (width <= 768px) {
+		min-width: 360px;
+	}
 }
 
 .header,
@@ -205,6 +221,10 @@ p {
 	padding: 0 86px;
 
 	width: 1440px;
+
+	@media screen and (width <= 1439px) {
+		width: 100%;
+	}
 }
 
 .content {
@@ -212,6 +232,10 @@ p {
 	justify-content: space-between;
 
 	margin: 0 auto;
+
+	@media screen and (width <= 1439px) {
+		flex-direction: column;
+	}
 }
 
 .content + .content {
@@ -222,6 +246,8 @@ p {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+
+	min-height: 60px;
 
 	margin: 0 auto;
 }
@@ -298,6 +324,10 @@ p {
 .header__aside {
 	display: flex;
 	align-items: center;
+
+	@media screen and (width <= 1199px) {
+		display: none;
+	}
 }
 
 .aside__button {
@@ -328,13 +358,17 @@ p {
 .nav {
 	justify-content: center;
 
-	margin-top: 37px; /* Так ровнее */
+	margin-top: 37px;
 
 	font-size: 20px;
 	font-weight: 600;
 	line-height: 80px;
 
 	background: var(--color-theme-primary);
+
+	@media screen and (width <= 1199px) {
+		display: none;
+	}
 }
 
 .nav::before {
@@ -374,12 +408,86 @@ p {
 	margin-left: 56px;
 }
 
+.mobile-nav-btn_open,
+.mobile-nav-btn_close {
+	position: relative;
+
+	height: 32px;
+	width: 32px;
+
+	@media screen and (width >= 1200px) {
+		display: none;
+	}
+}
+
+.nav_mobile {
+	display: none;
+	align-items: center;
+
+	position: fixed;
+	top: 0;
+	right: 0;
+
+	height: 100vh;
+	width: 100%;
+
+	z-index: 3;
+
+	@media screen and (width >= 1200px) {
+		display: none !important;
+	}
+}
+
+.nav_mobile__shadow {
+	height: 100%;
+	width: 20%;
+
+	background: #000;
+
+	opacity: 30%;
+}
+
+.nav_mobile__menu {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	height: 100%;
+	width: 80%;
+
+	padding: 37px 86px;
+
+	background: #fff;
+
+	box-shadow: 0 0 20px 20px #00000040;
+}
+
+.nav_mobile__menu-btn {
+	position: absolute;
+
+	top: 51px;
+	right: 86px;
+}
+
+.content-info {
+	@media screen and ((width >= 1200px) and (width <= 1439px)) {
+		flex-direction: row;
+	}
+}
+
 .content-info__side_left,
 .content-info__side_right {
 	width: 50%;
+
+	@media screen and (width <= 1199px) {
+		width: 100%;
+	}
 }
 
 .content-info__side_left {
+	display: flex;
+	flex-direction: column;
+
 	margin-top: 68px;
 }
 
@@ -395,6 +503,12 @@ p {
 
 .reviews {
 	margin-top: 114px;
+
+	@media screen and (width <= 1199px) {
+		align-self: end;
+
+		margin-top: -68px;
+	}
 }
 
 .reviews,
@@ -426,6 +540,14 @@ p {
 	display: flex;
 	align-items: end;
 	justify-content: right;
+
+	min-width: 600px;
+
+	@media screen and (width <= 1199px) {
+		justify-content: center;
+
+		margin-top: 84px;
+	}
 }
 
 .play-video {
@@ -631,6 +753,12 @@ p {
 	height: 591px;
 
 	background: var(--color-theme-secondary);
+
+	@media screen and (width <= 1439px) {
+		align-items: center;
+
+		height: auto;
+	}
 }
 
 .content-products::before {
