--- a/static/styles.css
+++ b/static/styles.css
@@ -202,6 +202,38 @@ p {
 	z-index: 2;
 }
 
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes slideIn {
+	from {
+		width: 40%;
+	}
+	to {
+		width: 60%;
+	}
+}
+
+.animate-fadein-css {
+	backface-visibility: hidden;
+	will-change: opacity;
+	animation: fadeIn 100ms linear;
+	transform: translateZ(0);
+}
+
+.animate-slidein-css {
+	backface-visibility: hidden;
+	will-change: width;
+	animation: slideIn 400ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
 /* MAIN */
 
 .wrapper {
@@ -441,7 +473,7 @@ p {
 
 .nav_mobile__shadow {
 	height: 100%;
-	width: 20%;
+	width: 100%;
 
 	background: #000;
 
@@ -454,7 +486,7 @@ p {
 	justify-content: center;
 
 	height: 100%;
-	width: 80%;
+	width: 60%;
 
 	padding: 37px 86px;
 
@@ -882,8 +914,6 @@ p {
 .content-trending {
 	flex-direction: column;
 	align-items: center;
-
-	padding-bottom: 48px;
 }
 
 .content__tabs {
@@ -892,6 +922,8 @@ p {
 
 .card-wrapper {
 	width: 361px;
+
+	margin-bottom: 48px;
 }
 
 .card-wrapper + .card-wrapper {
