--- a/static/styles.css
+++ b/static/styles.css
@@ -129,7 +129,7 @@ p {
 		width: calc(100% + 120px);
 	}
 
-	@media screen and (width <= 768px) {
+	@media screen and (width <= 767px) {
 		flex-direction: column;
 
 		width: 100%;
@@ -225,13 +225,12 @@ p {
 	backface-visibility: hidden;
 	will-change: opacity;
 	animation: fadeIn 100ms linear;
-	transform: translateZ(0);
 }
 
 .animate-slidein-css {
 	backface-visibility: hidden;
 	will-change: width;
-	animation: slideIn 400ms cubic-bezier(0.19, 1, 0.22, 1);
+	animation: slideIn 600ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 /* MAIN */
@@ -303,7 +302,7 @@ p {
 
 	padding: 0 10px 0 20px;
 
-	background: #fff9f01a;
+	background: #fff;
 
 	box-shadow: 0px 15px 50px 0px #2e849e21;
 
@@ -312,6 +311,12 @@ p {
 	outline: 2px solid transparent;
 
 	transition: outline-color 0.2s ease;
+}
+
+.search-form_mobile {
+	@media screen and (width <= 767px) {
+		display: none;
+	}
 }
 
 .search-form__input {
@@ -334,6 +339,10 @@ p {
 	transition: color 0.2s ease;
 }
 
+.search-form__input_mobile {
+	width: 100%;
+}
+
 .search-form__input:focus-visible {
 	color: #29293077;
 }
@@ -344,6 +353,8 @@ p {
 }
 
 .search-form__button {
+	flex-shrink: 0;
+
 	height: 38px;
 	width: 38px;
 
@@ -482,7 +493,9 @@ p {
 
 .nav_mobile__menu {
 	display: flex;
-	align-items: center;
+	flex-direction: column;
+	flex-shrink: 0;
+	align-items: stretch;
 	justify-content: center;
 
 	height: 100%;
@@ -490,9 +503,15 @@ p {
 
 	padding: 37px 86px;
 
-	background: #fff;
+	background: #fffffff7;
 
 	box-shadow: 0 0 20px 20px #00000040;
+
+	@media screen and (width <= 767px) {
+		width: 100%;
+
+		animation: none;
+	}
 }
 
 .nav_mobile__menu-btn {
@@ -500,6 +519,23 @@ p {
 
 	top: 51px;
 	right: 86px;
+}
+
+.nav_mobile__list {
+	flex-direction: column;
+
+	margin-top: 64px;
+}
+
+.nav_mobile__link + .nav_mobile__link {
+	margin-left: 0;
+	margin-top: 32px;
+}
+
+.nav_mobile__link a {
+	font-size: 42px;
+
+	color: var(--color-theme-text);
 }
 
 .content-info {
@@ -542,6 +578,12 @@ p {
 
 		margin-top: -68px;
 	}
+
+	@media screen and (width <= 767px) {
+		align-self: unset;
+
+		margin-top: 64px;
+	}
 }
 
 .reviews,
@@ -581,6 +623,15 @@ p {
 
 		margin-top: 84px;
 	}
+
+	@media screen and (width <= 767px) {
+		flex-direction: column;
+		align-items: center;
+
+		min-width: unset;
+
+		margin-top: 84px;
+	}
 }
 
 .play-video {
@@ -591,6 +642,12 @@ p {
 	width: 124px;
 
 	margin-bottom: 36px;
+
+	@media screen and (width <= 767px) {
+		order: 2;
+
+		margin-bottom: 0;
+	}
 }
 
 .play-video__wrapper {
@@ -815,6 +872,12 @@ p {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+
+	@media screen and (width <= 1439px) {
+		margin-top: 64px;
+
+		text-align: center;
+	}
 }
 
 .content-products_left__h2 {
@@ -825,6 +888,10 @@ p {
 	color: var(--color-theme-secondary);
 
 	text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
+
+	@media screen and (width <= 1439px) {
+		text-align: center;
+	}
 }
 
 .products {
@@ -835,10 +902,18 @@ p {
 	width: 623px;
 
 	margin-top: 36px;
+
+	@media screen and (width <= 1439px) {
+		width: 100%;
+	}
 }
 
 .products__photos {
 	display: flex;
+
+	@media screen and (width <= 1439px) {
+		justify-content: center;
+	}
 }
 
 .products__photos-img {
@@ -847,6 +922,10 @@ p {
 	border-radius: 136px;
 
 	object-fit: cover;
+
+	@media screen and (width <= 767px) {
+		width: 30%;
+	}
 }
 
 .products__photos-img + .products__photos-img {
@@ -894,6 +973,12 @@ p {
 	align-items: center;
 
 	margin-top: 24px;
+
+	@media screen and (width <= 1439px) {
+		justify-content: center;
+
+		margin-bottom: 76px;
+	}
 }
 
 .cart-btn {
@@ -923,11 +1008,12 @@ p {
 .card-wrapper {
 	width: 361px;
 
-	margin-bottom: 48px;
-}
+	margin-bottom: 64px;
 
-.card-wrapper + .card-wrapper {
-	margin-left: 24px;
+	@media screen and (width <= 1439px) {
+		margin-right: 24px;
+		margin-left: 24px;
+	}
 }
 
 .card {
