--- a/static/styles.css
+++ b/static/styles.css
@@ -143,8 +143,9 @@ p {
 }
 
 .tabs-pg-btn {
+	flex-shrink: 0;
+
 	width: 60px;
-	min-width: 60px; /* Без этого правила ширина меньше 60px */
 
 	@media screen and (width <= 1439px) {
 		display: none;
@@ -900,7 +901,8 @@ p {
 	transform: rotate(155deg);
 }
 
-.content-products {
+.content-products,
+.content-launches {
 	height: 591px;
 
 	background: var(--color-theme-secondary);
@@ -912,7 +914,8 @@ p {
 	}
 }
 
-.content-products::before {
+.content-products::before,
+.content-launches::before {
 	content: "";
 
 	display: block;
@@ -926,6 +929,10 @@ p {
 	background: var(--color-theme-secondary);
 
 	z-index: 1;
+}
+
+.content-launches__h3 {
+	margin: 76px 0;
 }
 
 .content-products_left,
@@ -969,7 +976,8 @@ p {
 	}
 }
 
-.products__photos {
+.products__photos,
+.launches__photos {
 	display: flex;
 
 	@media screen and (width <= 1439px) {
@@ -977,7 +985,8 @@ p {
 	}
 }
 
-.products__photos-img {
+.products__photos-img,
+.launches__photos-img {
 	width: 189px;
 
 	border-radius: 136px;
@@ -994,6 +1003,19 @@ p {
 	}
 }
 
+.launches__photos-img {
+	width: 237px;
+
+	@media screen and (width <= 767px) {
+		height: 300px;
+		width: 40%;
+	}
+
+	@media screen and (width <= 460px) {
+		height: 160px;
+	}
+}
+
 .products__photos-img + .products__photos-img {
 	margin-left: 28px;
 
@@ -1002,11 +1024,24 @@ p {
 	}
 }
 
+.launches__photos-img + .launches__photos-img {
+	margin-left: 45px;
+
+	@media screen and (width <= 460px) {
+		margin-left: 24px;
+	}
+}
+
 .products__photos-img:nth-of-type(2) {
 	margin-top: -70px;
 }
 
-.products__price {
+.launches__photos-img:nth-of-type(2) {
+	margin-top: 50px;
+}
+
+.products__price,
+.launches__price {
 	text-align: center;
 
 	font-size: 31px;
@@ -1017,6 +1052,14 @@ p {
 
 	@media screen and (width <= 460px) {
 		font-size: 24px;
+	}
+}
+
+.launches__price {
+	text-align: left;
+
+	@media screen and (width <= 1439px) {
+		text-align: center;
 	}
 }
 
@@ -1032,7 +1075,16 @@ p {
 	color: #fff;
 }
 
-.content-products_right__text {
+.content-launches_right__h2 {
+	font-size: 60px;
+	font-weight: 600;
+	line-height: 73px;
+
+	color: #fff;
+}
+
+.content-products_right__text,
+.content-launches_right__text {
 	width: 500px;
 
 	font-size: 21px;
@@ -1046,7 +1098,22 @@ p {
 	}
 }
 
-.products-actions {
+.content-launches_right__text {
+	width: 584px;
+
+	margin: 29px 0;
+
+	@media screen and (width <= 600px) {
+		width: 100%;
+	}
+}
+
+.content-launches_right__text a {
+	color: #fff;
+}
+
+.products-actions,
+.launches-actions {
 	display: flex;
 	align-items: center;
 
@@ -1063,6 +1130,10 @@ p {
 
 		margin-bottom: 38px;
 	}
+}
+
+.launches-actions {
+	margin-top: 48px;
 }
 
 .cart-btn {
@@ -1240,4 +1311,37 @@ p {
 
 .card-btn {
 	width: 100%;
+}
+
+.launches__colors {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+	width: 196px;
+
+	margin-top: 42px;
+
+	@media screen and (width <= 1439px) {
+		margin: 42px auto 0 auto;
+	}
+}
+
+.color {
+	height: 43px;
+	width: 43px;
+
+	border-radius: 50%;
+}
+
+.colors__black {
+	background: #111;
+}
+
+.colors__yellow {
+	background: #fff500;
+}
+
+.colors__blue {
+	background: #4484ff;
 }
