feat(page): welcome-popup completed

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,7 @@
 @import "../assets/fonts/Montserrat/stylesheet.css";
 
+@import "base";
 @import "reset";
-@import "tabs";
 
 .wrapper {
 	position: relative;
