fix(page): fix relative paths

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,4 @@
-@import "../assets/fonts/Montserrat/stylesheet.css";
+@import "fonts/Montserrat/stylesheet.css";
 
 @import "base";
 @import "reset";
